package ma.ensias.soa.authservice.Enums;

public enum TokenType {
    CONFIRM_EMAIL ,
    RESET_PASSWORD
}
