@startuml Auth Service Class Diagram

package "ma.ensias.soa.authservice" {
    
    ' ========== ENTITIES ==========
    class UserAuth {
        -Long id
        -String username
        -String password
        -String email
        -Boolean isActive
        -Instant created_at
    }
    
    class VerificationToken {
        -Long id
        -String token
        -String email
        -TokenType type
        -LocalDateTime expiresAt
        -boolean used
    }
    
    ' ========== ENUMS ==========
    enum TokenType {
        CONFIRM_EMAIL
        RESET_PASSWORD
    }
    
    ' ========== DTOs ==========
    class RegisterRequest {
        -String username
        -String email
        -String password
    }
    
    class LoginRequest {
        -String username
        -String password
        -boolean remember_me
    }
    
    class LoginResponse {
        -String token
        -String username
        -String email
        -boolean remember_me
    }
    
    class AuthResponse {
        -boolean authenticated
        -String message
    }
    
    class ApiResponse {
        -String message
    }
    
    class ForgotPasswordRequest {
        -String email
    }
    
    class ResetPasswordRequest {
        -String token
        -String newPassword
    }
    
    class VerifyTokenRequest {
        -String token
    }
    
    class VerifyEmailRequest {
        -String token
    }
    
    class ResendVerificationRequest {
        -String email
    }
    
    ' ========== CONTROLLERS ==========
    class AuthController {
        +registerUser(RegisterRequest): ResponseEntity<String>
        +loginUser(LoginRequest, HttpServletResponse): ResponseEntity<LoginResponse>
        +verifyUser(String): ResponseEntity<AuthResponse>
        +forgotPassword(ForgotPasswordRequest): ResponseEntity<ApiResponse>
        +resetPassword(ResetPasswordRequest): ResponseEntity<ApiResponse>
        +verifyEmail(VerifyEmailRequest): ResponseEntity<ApiResponse>
        +verifyToken(VerifyTokenRequest): ResponseEntity<?>
        +resendVerification(ResendVerificationRequest): ResponseEntity<ApiResponse>
    }
    
    ' ========== SERVICES ==========
    class AuthService {
        -UserAuthRepository userAuthRepository
        -PasswordEncoder passwordEncoder
        -JwtUtil jwtUtil
        -EmailService emailService
        -VerificationTokenRepository verificationTokenRepository
        +registerUser(RegisterRequest): UserAuth
        +loginUser(LoginRequest): LoginResponse
        +forgetPassword(String): void
        +resetPassword(String, String): void
        +VerifyEmailToken(String): void
        +attachAuthCookie(HttpServletResponse, String, boolean): void
        -generateShortToken(): String
    }
    
    class EmailService {
        +sendEmailVerification(UserAuth, String): void
        +sendPasswordResetToken(UserAuth, String): void
    }
    
    class JwtUtil {
        +generateToken(UserAuth, boolean): String
        +extractEmail(String): String
        +validateToken(String, String): boolean
        +isTokenExpired(String): boolean
    }
    
    ' ========== REPOSITORIES ==========
    interface UserAuthRepository {
        +findByEmail(String): Optional<UserAuth>
        +existsByEmail(String): Boolean
        +save(UserAuth): UserAuth
        +findByUsername(String): Optional<UserAuth>
    }
    
    interface VerificationTokenRepository {
        +findByToken(String): Optional<VerificationToken>
        +save(VerificationToken): VerificationToken
        +delete(VerificationToken): void
    }
    
    ' ========== EXCEPTIONS ==========
    class UserNotFoundException {
        +String message
    }
    
    class InvalidTokenException {
        +String message
    }
    
    class UnauthorizedException {
        +String message
    }
    
    class EmailSendException {
        +String message
    }
    
    class GlobalExceptionHandler {
        +handleUserNotFoundException(UserNotFoundException): ResponseEntity<?>
        +handleInvalidTokenException(InvalidTokenException): ResponseEntity<?>
        +handleUnauthorizedException(UnauthorizedException): ResponseEntity<?>
        +handleEmailSendException(EmailSendException): ResponseEntity<?>
    }
    
    ' ========== CONFIG ==========
    class SecurityConfig {
        +passwordEncoder(): PasswordEncoder
        +securityFilterChain(HttpSecurity): SecurityFilterChain
    }
    
    class CorsConfig {
        +corsFilter(): CorsFilter
    }
    
    ' ========== RELATIONSHIPS ==========
    AuthController --> AuthService
    AuthController --> JwtUtil
    AuthService --> UserAuthRepository
    AuthService --> VerificationTokenRepository
    AuthService --> PasswordEncoder
    AuthService --> JwtUtil
    AuthService --> EmailService
    UserAuthRepository ..> UserAuth
    VerificationTokenRepository ..> VerificationToken
    VerificationToken --> TokenType
    AuthService ..> RegisterRequest
    AuthService ..> LoginRequest
    AuthService ..> LoginResponse
    EmailService ..> UserAuth
    GlobalExceptionHandler ..> UserNotFoundException
    GlobalExceptionHandler ..> InvalidTokenException
    GlobalExceptionHandler ..> UnauthorizedException
    GlobalExceptionHandler ..> EmailSendException
    
    note right of UserAuth
        Entity representing
        authenticated users
    end note
    
    note right of VerificationToken
        Tokens for email
        verification and
        password reset
    end note
    
    note right of AuthService
        Main business logic
        for authentication
        and authorization
    end note

}

@enduml

